[gd_scene load_steps=12 format=3 uid="uid://bsay275u1m2ju"]

[ext_resource type="Script" path="res://level_1.gd" id="1_hdjqq"]
[ext_resource type="PackedScene" uid="uid://bc0rue3ryy421" path="res://LevelBuilding/cave_tile_map.tscn" id="1_n1j0q"]
[ext_resource type="PackedScene" uid="uid://wwppebyk0cta" path="res://Actors/that_guy.tscn" id="2_gpkwu"]
[ext_resource type="PackedScene" uid="uid://c6kads1wpyhqi" path="res://LevelBuilding/Collectables/Lantern.tscn" id="3_lxww2"]
[ext_resource type="Texture2D" uid="uid://okskvaq15lkj" path="res://Assets/Tiles/caveBackground.png" id="4_ryt32"]
[ext_resource type="PackedScene" uid="uid://d1hvlcsmwpu5n" path="res://LevelBuilding/water_zone.tscn" id="5_insax"]
[ext_resource type="AudioStream" uid="uid://jggxns43rano" path="res://Assets/Sounds/Background music/Background_music_1 (2).wav" id="7_u6hv7"]
[ext_resource type="PackedScene" uid="uid://c5yxrnl4ksxfe" path="res://LevelBuilding/Collectables/light_collectable.tscn" id="8_swe8j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfsq4"]
size = Vector2(284.5, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fex2m"]
size = Vector2(96, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_go6ha"]
size = Vector2(75, 43)

[node name="level_1" type="Node2D"]
script = ExtResource("1_hdjqq")

[node name="caveTileMap" parent="." instance=ExtResource("1_n1j0q")]
z_index = 1
rendering_quadrant_size = 32
layer_0/tile_data = PackedInt32Array(196608, 786432, 1, 196609, 851968, 1, 131074, 786432, 0, 196610, 786432, 1, 131075, 851968, 0, 196611, 851968, 1, 131076, 786432, 0, 196612, 786432, 1, 131077, 851968, 0, 196613, 851968, 1, 131078, 786432, 0, 196614, 786432, 1, 131079, 851968, 0, 196615, 851968, 1, 131080, 786432, 0, 196616, 786432, 1, 131081, 851968, 0, 196617, 851968, 1, 131082, 786432, 0, 196618, 786432, 1, 131083, 851968, 0, 196619, 851968, 1, 131084, 786432, 0, 196620, 786432, 1, 131085, 851968, 0, 196621, 851968, 1, 131086, 786432, 0, 196622, 786432, 1, 131087, 851968, 0, 196623, 851968, 1, 131088, 786432, 0, 196624, 786432, 1, 131089, 851968, 0, 196625, 851968, 1, 131090, 262144, 0, 196626, 262144, 1, 131091, 327680, 0, 196627, 327680, 1, 131092, 262144, 0, 196628, 262144, 1, 2, 0, 12, 65538, 0, 13, 3, 65536, 12, 65539, 65536, 13, 131072, 786432, 0, 131073, 851968, 0, 131095, 786432, 0, 196631, 786432, 1, 131096, 851968, 0, 196632, 851968, 1, 131097, 786432, 0, 196633, 786432, 1, 131098, 851968, 0, 196634, 851968, 1, 131093, 786432, 0, 196629, 786432, 1, 131094, 851968, 0, 196630, 851968, 1, 65535, 196608, 6, 131071, 196608, 7, 131070, 131072, 7, 65534, 131072, 6, -65538, 131072, 6, -2, 131072, 7, -65537, 196608, 6, -1, 196608, 7, -196610, 131072, 6, -131074, 131072, 7, -196609, 196608, 6, -131073, 196608, 7, -327682, 131072, 6, -262146, 131072, 7, -327681, 196608, 6, -262145, 196608, 7, -458751, 262144, 805306368, -458750, 327680, 805306368, -524286, 327680, 805306369, -524287, 262144, 805306369, -524288, 327680, 805306369, -458752, 327680, 805306368, -524285, 262144, 805306369, -458749, 262144, 805306368, -524284, 327680, 805306369, -458748, 327680, 805306368, -524283, 262144, 805306369, -458747, 262144, 805306368, -524282, 327680, 805306369, -458746, 327680, 805306368, -524281, 262144, 805306369, -458745, 262144, 805306368, -524280, 327680, 805306369, -458744, 327680, 805306368, -524279, 262144, 805306369, -458743, 262144, 805306368)

[node name="Lantern" parent="." instance=ExtResource("3_lxww2")]
z_index = 1
position = Vector2(241, -37)

[node name="Lantern" parent="Lantern" instance=ExtResource("3_lxww2")]
z_index = 1
position = Vector2(271, 21)

[node name="CaveBackground" type="Sprite2D" parent="."]
position = Vector2(350, 515)
scale = Vector2(3.31738, 1.9873)
texture = ExtResource("4_ryt32")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="WaterZone" parent="." instance=ExtResource("5_insax")]
position = Vector2(400, 74)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WaterZone"]
position = Vector2(111, 594)
shape = SubResource("RectangleShape2D_tfsq4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterZone"]
position = Vector2(488, 575)
shape = SubResource("RectangleShape2D_fex2m")

[node name="Player" type="Node2D" parent="."]

[node name="That Guy" parent="Player" instance=ExtResource("2_gpkwu")]
z_index = 1
position = Vector2(48, -19)

[node name="BackroundMusic1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_u6hv7")
volume_db = -15.0
autoplay = true

[node name="Lantern2" parent="." instance=ExtResource("3_lxww2")]
position = Vector2(919, 368)

[node name="LightCollectable2" parent="." instance=ExtResource("8_swe8j")]
position = Vector2(1495, 244)

[node name="EndOfLevel" type="Area2D" parent="."]
position = Vector2(178, 533)

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndOfLevel"]
position = Vector2(24.5, 31.5)
shape = SubResource("RectangleShape2D_go6ha")

[connection signal="finished" from="BackroundMusic1" to="." method="_on_backround_music_1_finished"]
[connection signal="body_entered" from="EndOfLevel" to="." method="_on_end_of_level_body_entered"]
