[gd_scene load_steps=10 format=3 uid="uid://cm0trbg2hlpvt"]

[ext_resource type="Script" path="res://level_1.gd" id="1_losa4"]
[ext_resource type="PackedScene" uid="uid://bc0rue3ryy421" path="res://LevelBuilding/cave_tile_map.tscn" id="2_spu2v"]
[ext_resource type="PackedScene" uid="uid://c6kads1wpyhqi" path="res://LevelBuilding/Collectables/Lantern.tscn" id="3_1g7py"]
[ext_resource type="Texture2D" uid="uid://okskvaq15lkj" path="res://Assets/Tiles/caveBackground.png" id="4_lemt6"]
[ext_resource type="PackedScene" uid="uid://d1hvlcsmwpu5n" path="res://LevelBuilding/water_zone.tscn" id="5_a0hvu"]
[ext_resource type="PackedScene" uid="uid://wwppebyk0cta" path="res://Actors/that_guy.tscn" id="6_4u4ms"]
[ext_resource type="AudioStream" uid="uid://jggxns43rano" path="res://Assets/Sounds/Background music/Background_music_1 (2).wav" id="7_8duw0"]
[ext_resource type="PackedScene" uid="uid://bq0wv6vc05in1" path="res://LevelBuilding/mud_zone.tscn" id="8_m5hyi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i04ca"]
size = Vector2(288, 88)

[node name="level_2" type="Node2D"]
script = ExtResource("1_losa4")

[node name="caveTileMap" parent="." instance=ExtResource("2_spu2v")]
z_index = 1
layer_0/tile_data = PackedInt32Array(131072, 786432, 0, 196608, 786432, 1, 131073, 851968, 0, 196609, 851968, 1, 131074, 786432, 0, 196610, 786432, 1, 131075, 851968, 0, 196611, 851968, 1, 131076, 786432, 0, 196612, 786432, 1, 131077, 851968, 0, 196613, 851968, 1, 131078, 786432, 0, 196614, 786432, 1, 131079, 851968, 0, 196615, 851968, 1, 196606, 655360, 6, 262142, 655360, 7, 196607, 720896, 6, 262143, 720896, 7, 65534, 131072, 6, 131070, 131072, 7, 65535, 196608, 6, 131071, 196608, 7, -65538, 131072, 6, -2, 131072, 7, -65537, 196608, 6, -1, 196608, 7, -196610, 131072, 6, -131074, 131072, 7, -196609, 196608, 6, -131073, 196608, 7, -327682, 131072, 7, -262146, 131072, 7, -327681, 196608, 7, -262145, 196608, 7, -393218, 131072, 6, -393217, 196608, 6, 2, 0, 12, 65538, 0, 13, 3, 65536, 12, 65539, 65536, 13, -524290, 262144, 8, -458754, 65536, 0, -524289, 262144, 8, -458753, 262144, 9, -589824, 327680, 8, -524288, 327680, 9, -720896, 262144, 1342177280, -655360, 327680, 1342177280, -655361, 262144, 1342177281, -589825, 327680, 1342177281, -851968, 262144, 1342177280, -786432, 327680, 1342177280, -786433, 262144, 1342177281, -720897, 327680, 1342177281, -983040, 262144, 1342177280, -917504, 327680, 1342177280, -917505, 262144, 1342177281, -851969, 327680, 1342177281, -589819, 327680, 805306369, -524283, 327680, 805306368, -589820, 327680, 1610612736, -524284, 262144, 1610612736, -720891, 327680, 1610612737, -655355, 262144, 1610612737, -720892, 327680, 1610612736, -655356, 262144, 1610612736, -851963, 327680, 1610612737, -786427, 262144, 1610612737, -851964, 327680, 1610612736, -786428, 262144, 1610612736, -983035, 327680, 1610612737, -917499, 262144, 1610612737, -983036, 327680, 1610612736, -917500, 262144, 1610612736, -1114107, 327680, 1610612737, -1048571, 262144, 1610612737, -1114108, 327680, 1610612736, -1048572, 262144, 1610612736, -1245179, 327680, 1610612737, -1179643, 262144, 1610612737, -1245180, 327680, 1610612736, -1179644, 262144, 1610612736, -1376251, 327680, 1610612737, -1310715, 262144, 1610612737, -1376252, 327680, 1610612736, -1310716, 262144, 1610612736, -1507323, 327680, 1610612737, -1441787, 262144, 1610612737, -1507324, 327680, 1610612736, -1441788, 262144, 1610612736, -1638395, 327680, 1610612737, -1572859, 262144, 1610612737, -1638396, 327680, 1610612736, -1572860, 262144, 1610612736, -1114112, 262144, 1342177280, -1048576, 327680, 1342177280, -1048577, 262144, 1342177281, -983041, 327680, 1342177281, -1245184, 262144, 1342177280, -1179648, 327680, 1342177280, -1179649, 262144, 1342177281, -1114113, 327680, 1342177281, -1376256, 262144, 1342177280, -1310720, 327680, 1342177280, -1310721, 262144, 1342177281, -1245185, 327680, 1342177281, -1507328, 262144, 1342177280, -1441792, 327680, 1342177280, -1441793, 262144, 1342177281, -1376257, 327680, 1342177281, -1638400, 262144, 1342177280, -1572864, 327680, 1342177280, -1572865, 262144, 1342177281, -1507329, 327680, 1342177281, -1769472, 327680, 1342177280, -1703936, 327680, 1342177280, -1703937, 327680, 1342177281, -1638401, 327680, 1342177281, -1769467, 262144, 1610612737, -1703931, 262144, 1610612737, -1769468, 262144, 1610612736, -1703932, 262144, 1610612736, 131080, 262144, 0, 196616, 262144, 1, 131081, 327680, 0, 196617, 327680, 1, 131082, 262144, 0, 196618, 262144, 1, 131083, 327680, 0, 196619, 327680, 1, 131084, 262144, 0, 196620, 262144, 1, 131085, 327680, 0, 196621, 327680, 1, 131086, 262144, 0, 196622, 262144, 1, 131087, 327680, 0, 196623, 327680, 1, 131088, 262144, 0, 196624, 262144, 1342177281, 131089, 327680, 0, 196625, 262144, 1342177280, -589818, 262144, 805306369, -524282, 262144, 805306368, -589816, 655360, 1342177286, -524280, 720896, 1342177286, -589817, 655360, 1342177287, -524281, 720896, 1342177287, -720886, 655360, 1342177286, -655350, 720896, 1342177286, -720887, 655360, 1342177287, -655351, 720896, 1342177287, -1835008, 262144, 1342177280, -1769473, 262144, 1342177281, -1966080, 262144, 1342177280, -1900544, 327680, 1342177280, -1900545, 262144, 1342177281, -1835009, 327680, 1342177281, -2097152, 262144, 1342177280, -2031616, 327680, 1342177280, -2031617, 262144, 1342177281, -1966081, 327680, 1342177281, -2228224, 262144, 1342177280, -2162688, 327680, 1342177280, -2162689, 262144, 1342177281, -2097153, 327680, 1342177281, -2359296, 327680, 1342177280, -2293760, 327680, 1342177280, -2293761, 327680, 1342177281, -2228225, 327680, 1342177281, -2293756, 262144, 1610612736, -2359292, 262144, 1610612736, -2293755, 262144, 1610612737, -2359291, 262144, 1610612737, -2162684, 262144, 1610612736, -2228220, 327680, 1610612736, -2162683, 262144, 1610612737, -2228219, 327680, 1610612737, -2031612, 262144, 1610612736, -2097148, 327680, 1610612736, -2031611, 262144, 1610612737, -2097147, 327680, 1610612737, -1900540, 262144, 1610612736, -1966076, 327680, 1610612736, -1900539, 262144, 1610612737, -1966075, 327680, 1610612737, -1835004, 327680, 1610612736, -1835003, 327680, 1610612737, -2752508, 262144, 1610612736, -2818044, 327680, 1610612736, -2752507, 262144, 1610612737, -2818043, 327680, 1610612737, -2621436, 262144, 1610612736, -2686972, 327680, 1610612736, -2621435, 262144, 1610612737, -2686971, 327680, 1610612737, -2490364, 262144, 1610612736, -2555900, 327680, 1610612736, -2490363, 262144, 1610612737, -2555899, 327680, 1610612737, -2424828, 327680, 1610612736, -2424827, 327680, 1610612737, -2818048, 262144, 1342177280, -2752512, 327680, 1342177280, -2752513, 262144, 1342177281, -2686977, 327680, 1342177281, -2686976, 262144, 1342177280, -2621440, 327680, 1342177280, -2621441, 262144, 1342177281, -2555905, 327680, 1342177281, -2555904, 262144, 1342177280, -2490368, 327680, 1342177280, -2490369, 262144, 1342177281, -2424833, 327680, 1342177281, -2424832, 262144, 1342177280, -2359297, 262144, 1342177281, 131090, 2, 0, 196626, 3, 0, 131091, 65538, 0, 196627, 65539, 0, 131092, 2, 0, 196628, 2, 1, 131093, 65538, 0, 196629, 65538, 1, 131094, 2, 0, 196630, 2, 1, 131095, 65538, 0, 196631, 65538, 1, 131096, 2, 0, 196632, 2, 1, 131097, 65538, 0, 196633, 65538, 1, 131098, 2, 0, 196634, 2, 1, 131099, 65538, 0, 196635, 65538, 1, 131100, 2, 0, 196636, 2, 1, 131101, 65538, 0, 196637, 65538, 1, 131102, 2, 0, 196638, 2, 1, 131103, 65538, 0, 196639, 65538, 1, 131104, 2, 0, 196640, 2, 1, 131105, 65538, 0, 196641, 65538, 1, 262162, 65539, 0, 327698, 65539, 1, 262163, 3, 0, 327699, 3, 1, 262161, 327680, 1342177280, 327697, 262144, 1342177280, 262164, 65539, 0, 327700, 65539, 1, 262165, 3, 0, 327701, 3, 1, 262166, 65539, 0, 327702, 65539, 1, 262167, 3, 0, 327703, 3, 1, 262168, 65539, 0, 327704, 65539, 1, 262169, 3, 0, 327705, 3, 1, 262170, 65539, 0, 327706, 65539, 1, 262171, 3, 0, 327707, 3, 1, 262172, 65539, 0, 327708, 65539, 1, 262173, 3, 0, 327709, 3, 1, 262174, 65539, 0, 327710, 65539, 1, 262175, 3, 0, 327711, 3, 1, 262176, 65539, 0, 327712, 65539, 1, 262177, 3, 0, 327713, 3, 1, 262178, 3, 1, 327714, 3, 0, 393234, 3, 0, 458770, 3, 1, 393235, 65539, 0, 458771, 65539, 1, 393236, 3, 0, 458772, 3, 1, 393237, 65539, 0, 458773, 65539, 1, 393238, 3, 0, 458774, 3, 1, 393239, 65539, 0, 458775, 65539, 1, 393240, 3, 0, 458776, 3, 1, 393241, 65539, 0, 458777, 65539, 1, 393242, 3, 0, 458778, 3, 1, 393243, 65539, 0, 458779, 65539, 1, 393244, 3, 0, 458780, 3, 1, 393245, 65539, 0, 458781, 65539, 1, 393246, 3, 0, 458782, 3, 1, 393247, 65539, 0, 458783, 65539, 1, 393248, 3, 0, 458784, 3, 1, 393249, 65539, 0, 458785, 65539, 1, 196642, 2, 1, 196643, 65538, 1, 262179, 65539, 1, 393250, 3, 0, 327715, 65539, 0, 393251, 65539, 0, 458786, 3, 1, 458787, 65539, 1, 131106, 2, 0, 131107, 65538, 0, 262160, 327680, 1342177281, 393233, 327680, 1342177280, 327696, 262144, 1342177281, 393232, 327680, 1342177281, 458769, 262144, 1342177280, 524305, 262144, 0, 458768, 262144, 1342177281, 524304, 327680, 1342177281, 589841, 262144, 1, 589842, 327680, 1, 524306, 327680, 0, 589843, 262144, 1, 524307, 262144, 0, 589844, 327680, 1, 524308, 327680, 0, 589845, 262144, 1, 524309, 262144, 0, 589846, 327680, 1, 524310, 327680, 0, 589847, 262144, 1, 524311, 262144, 0, 589848, 327680, 1, 524312, 327680, 0, 589849, 262144, 1, 524313, 262144, 0, 589850, 327680, 1, 524314, 327680, 0, 589851, 262144, 1, 524315, 262144, 0, 589852, 327680, 1, 524316, 327680, 0, 589853, 262144, 1, 524317, 262144, 0, 589854, 327680, 1, 524318, 327680, 0, 589855, 262144, 1, 524319, 262144, 0, 589856, 327680, 1, 524320, 327680, 0, 589857, 262144, 1, 524321, 262144, 0, 589858, 327680, 1, 524322, 327680, 0, 589859, 262144, 1, 524323, 262144, 0, 589860, 327680, 1, 524324, 327680, 0, 196644, 262144, 1610612736, 131108, 327680, 1610612736, 196645, 262144, 1, 131109, 262144, 0, 327716, 262144, 1610612736, 262180, 327680, 1610612736, 327717, 262144, 1610612737, 262181, 327680, 1610612737, 458788, 262144, 1610612736, 393252, 327680, 1610612736, 458789, 262144, 1610612737, 393253, 327680, 1610612737, 131110, 327680, 0, 196646, 327680, 1, 131112, 327680, 0, 196648, 327680, 1, 131111, 262144, 0, 196647, 262144, 1, 131114, 327680, 0, 196650, 327680, 1, 131113, 262144, 0, 196649, 262144, 1, 131116, 327680, 0, 196652, 327680, 1, 131115, 262144, 0, 196651, 262144, 1, 131118, 327680, 0, 196654, 327680, 1, 131117, 262144, 0, 196653, 262144, 1, 131120, 327680, 0, 196656, 327680, 1, 131119, 262144, 0, 196655, 262144, 1, 131122, 327680, 0, 196658, 327680, 1, 131121, 262144, 0, 196657, 262144, 1, 131124, 327680, 0, 196660, 327680, 1, 131123, 262144, 0, 196659, 262144, 1)

[node name="Lantern" parent="." instance=ExtResource("3_1g7py")]
z_index = 1
position = Vector2(110, -46)

[node name="CaveBackground" type="Sprite2D" parent="."]
position = Vector2(1182.5, 33.7488)
scale = Vector2(4.81152, 2.89404)
texture = ExtResource("4_lemt6")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="WaterZone" parent="." instance=ExtResource("5_a0hvu")]
position = Vector2(400, 74)

[node name="Player" type="Node2D" parent="."]

[node name="That Guy" parent="Player" instance=ExtResource("6_4u4ms")]
z_index = 1
position = Vector2(37, -413)

[node name="BackroundMusic1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8duw0")
volume_db = -15.0
autoplay = true

[node name="MudZone" parent="." instance=ExtResource("8_m5hyi")]
position = Vector2(293, 44)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MudZone"]
position = Vector2(138, 37)
shape = SubResource("RectangleShape2D_i04ca")

[connection signal="finished" from="BackroundMusic1" to="." method="_on_backround_music_1_finished"]
